--- a/views/authorizationcompleted.pug
+++ b/views/authorizationcompleted.pug
@@ -3,6 +3,6 @@ html
         title Success
     body
         h1 Installation completed
-        p Thanks for installing Gospel Slack App.
+        p Thanks for installing Slack App.
 
-        p Sorry for this page is stylized so poorly. We spent all money for design in church.
+        p Sorry for this page is stylized so poorly.
